feat: add transpilation for module resolution

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,9 +1,17 @@
 {
     "compilerOptions": {
         "outDir": "js",
+        "baseUrl": "./",
+        "paths": {
+            "@shared/*": [
+              "../shared/*"
+            ]
+        },
+        "plugins": [{"transform": "@zerollup/ts-transform-paths" }],
     },
     "files": [
         "index.ts",
         "alert.ts"
-      ]
+      ],
+    
 }
