--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,9 @@
 {
   "scripts": {
     "compile": "tsc",
-    "transpile": "babel js -d build"
+    "link_shared": "rm shared && ln -s ../shared shared"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^4.4.3"
   }
 }
