--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,19 @@
 {
+  "name": "app",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
     "compile": "tsc",
-    "link_shared": "rm shared && ln -s ../shared shared"
+    "link_shared": "rm -rf shared && ln -s ../shared shared",
+    "bundle": "webpack-cli"
   },
   "devDependencies": {
-    "typescript": "^4.4.3"
-  }
+    "typescript": "^4.4.3",
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.0"
+  },
+  "dependencies": {
+    "shared": "1.0.0"
+  },
+  "license": "MIT"
 }
