--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,8 +1,11 @@
 {
-    "compilerOptions": {
-        "outDir": "js",
-    },
-    "files": [
+  "compilerOptions": {
+    "composite": true,
+    "emitDeclarationOnly": true,
+    "outDir": "./dist/types"
+  },
+  "exclude": ["./dist"],
+"files": [
         "windowSizeLogger.ts"
       ]
 }
