--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "compile": "tsc"
+    "compile": "tsc",
+    "transpile": "babel js -d build"
   }
 }
