--- a/app/package.json
+++ b/app/package.json
@@ -7,10 +7,11 @@
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
+    "babel-plugin-add-import-extension": "^1.6.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "transpile": "babel . --extensions .ts,.tsx -d build"
+    "transpile": "babel . --extensions .ts,.tsx -d build && babel ../shared --extensions .ts,.tsx -d build/shared"
   }
 }
