--- a/app/package.json
+++ b/app/package.json
@@ -5,13 +5,16 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "rm -rf shared && ln -sf ../shared shared",
-    "transpile": "babel . --extensions .ts -d build"
+    "transpile": "babel . --extensions .ts -d build",
+    "bundle": "webpack"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
     "babel-plugin-add-import-extension": "^1.6.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "webpack": "^5.60.0",
+    "webpack-cli": "^4.9.1"
   }
 }
