--- a/app/package.json
+++ b/app/package.json
@@ -16,5 +16,8 @@
     "typescript": "^4.4.4",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "is-odd": "^3.0.1"
   }
 }
