--- a/app/package.json
+++ b/app/package.json
@@ -15,5 +15,8 @@
     "serve": "^13.0.2",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "shared": "1.0.0"
   }
 }
