--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-typescript": "^7.16.0",
     "babel-loader": "^8.2.3",
     "serve": "^13.0.2",
+    "typescript": "^4.4.4",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1"
   },
