--- a/shared/package.json
+++ b/shared/package.json
@@ -8,6 +8,7 @@
     "transpile": "babel . --out-dir lib --extensions '.ts'"
   },
   "browser": "lib/",
+  "files": ["lib/"],
   "dependencies": {
     "is-odd": "^3.0.1"
   },
@@ -16,6 +17,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
-    "babel-loader": "^8.2.3"
+    "babel-loader": "^8.2.3",
+    "typescript": "^4.4.4"
   }
 }
