--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,6 +1,7 @@
 {
   // Change this to match your project
-  "include": ["**/*"],
+  "include": ["**/*.ts"],
+  "exclude": ["./lib"],
   "compilerOptions": {
     // Tells TypeScript to read JS files, as
     // normally they are ignored as source files
@@ -13,6 +14,6 @@
     // Types should go into this directory.
     // Removing this would place the .d.ts files
     // next to the .js files
-    "outDir": "lib"
+    "outDir": "lib/types"
   }
 }
