--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "4.5.2"
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-typescript": "7.16.0",
+    "babel-plugin-resolver": "^1.1.0",
+    "typescript": "4.5.2",
+    "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-add-import-extension": "1.6.0"
   },
   "scripts": {
-    "transpile": "tsc"
+    "transpile": "babel . --extensions .ts,.tsx -d build && babel ../shared --extensions .ts,.tsx -d build/shared",
+    "serve": "npx serve"
   }
 }
