--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "dependencies": {
+    "serve": "13.0.2"
+  },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
+    "serve": "13.0.2",
     "@babel/core": "^7.16.0",
     "@babel/preset-typescript": "7.16.0",
     "babel-plugin-resolver": "^1.1.0",
@@ -13,7 +17,7 @@
     "babel-plugin-add-import-extension": "1.6.0"
   },
   "scripts": {
-    "transpile": "babel . --extensions .ts,.tsx -d build && babel ../shared --extensions .ts,.tsx -d build/shared",
-    "serve": "npx serve"
+    "transpile": "babel . --extensions .ts -d build && babel ../shared --extensions .ts -d build/shared",
+    "start": "serve"
   }
 }
